--- a/PurchaseMate/Base.lproj/Main.storyboard
+++ b/PurchaseMate/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F19a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="MqM-go-RSp">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="MqM-go-RSp">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -155,7 +155,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="6MM-l4-w2V">
                         <barButtonItem key="backBarButtonItem" title=" " id="B5F-Qt-UEi"/>
-                        <barButtonItem key="rightBarButtonItem" image="triangle.png" id="mvo-j2-sRD">
+                        <barButtonItem key="rightBarButtonItem" image="warningTriangle" id="mvo-j2-sRD">
                             <connections>
                                 <segue destination="Vsz-LZ-4B9" kind="push" id="SNL-e9-r7j"/>
                             </connections>
@@ -206,6 +206,8 @@
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Y7N-IU-LeP">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="sectionIndexBackgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <sections>
                             <tableViewSection id="pHt-iD-2Ui">
                                 <cells>
@@ -269,7 +271,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="triangle.png" width="25" height="25"/>
+        <image name="warningTriangle" width="25" height="25"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
