--- a/PurchaseMate/Base.lproj/Main.storyboard
+++ b/PurchaseMate/Base.lproj/Main.storyboard
@@ -48,7 +48,7 @@
         <!--ResultsVC-->
         <scene sceneID="EQm-zL-MDl">
             <objects>
-                <viewController id="eR0-js-a8Z" customClass="resultsVC" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="results" id="eR0-js-a8Z" customClass="resultsVC" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="bNK-kw-MaJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -173,11 +173,6 @@
                     </view>
                     <navigationItem key="navigationItem" id="6MM-l4-w2V">
                         <barButtonItem key="backBarButtonItem" title=" " id="B5F-Qt-UEi"/>
-                        <barButtonItem key="rightBarButtonItem" image="warningTriangle" id="mvo-j2-sRD">
-                            <connections>
-                                <segue destination="Vsz-LZ-4B9" kind="push" id="SNL-e9-r7j"/>
-                            </connections>
-                        </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
@@ -204,7 +199,7 @@
         <!--PurchaseMate-->
         <scene sceneID="bSy-Sf-gr9">
             <objects>
-                <viewController id="Enw-2V-boP" customClass="reviewVC" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="review" id="Enw-2V-boP" customClass="reviewVC" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="J0G-7p-6xB">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -221,7 +216,7 @@
         <!--ReportTVC-->
         <scene sceneID="o3c-Yn-iJ0">
             <objects>
-                <tableViewController id="Vsz-LZ-4B9" customClass="reportTVC" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="report" id="Vsz-LZ-4B9" customClass="reportTVC" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Y7N-IU-LeP">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -232,7 +227,7 @@
                             <tableViewSection id="pHt-iD-2Ui">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Ahg-EC-zRh">
-                                        <rect key="frame" x="0.0" y="64" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ahg-EC-zRh" id="o88-Wh-Mae">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
@@ -251,7 +246,7 @@
                                         <animations/>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="HK7-m0-Xvf">
-                                        <rect key="frame" x="0.0" y="108" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="HK7-m0-Xvf" id="xxe-ZV-ro9">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
@@ -298,6 +293,5 @@
     </scenes>
     <resources>
         <image name="starEmpty" width="40" height="37"/>
-        <image name="warningTriangle" width="25" height="25"/>
     </resources>
 </document>
